fix: flex wrap product variation

--- a/react/components/ProductColorVariation/styles.global.css
+++ b/react/components/ProductColorVariation/styles.global.css
@@ -3,6 +3,7 @@
   align-items: center;
   gap: 12px;
   margin: 24px 0 0 0;
+  flex-wrap: wrap;
 }
 
 .product-color-variation .variation {
